Fix URL for DTO + fix variables

--- a/templates/pages/constellation.html.twig
+++ b/templates/pages/constellation.html.twig
@@ -9,7 +9,7 @@
 {% block content %}
   <div id="appConst"
      data-const-widget
-     data-title="{{ title|trans }}"
+     data-title="{{ title }}"
      data-title-map="{{ 'skymap'|trans }}"
      data-desc="{{ constellation.description|raw }}"
      data-imgcover="{{ constellation.image }}"
