--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -39,4 +39,4 @@
   {{ parent() }}
   {{ encore_entry_script_tags('dso') }}
   {{ encore_entry_script_tags('skymap') }}
-{% endblock %
+{% endblock %}
