Where is the bug ??

--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -19,7 +19,7 @@
     data-description="{{ dso.description }}"
     data-title-map="{{ 'skymap'|trans }}"
     data-title-gallery="{{ 'galery'|trans }}"
-    data-images="{{ images|json_encode|default({}) }}"
+    data-images="{{ images|json_encode }}"
     data-astrobin-msg="{{ 'astrobin.message'|trans }}"
     data-title-const="{{ dso.constellation.title }}"
     data-dso-const="{{ dso_by_const|json_encode }}"
