--- a/templates/includes/layout/header.html.twig
+++ b/templates/includes/layout/header.html.twig
@@ -6,15 +6,14 @@
     'switchLang': 'switchLang'|trans|trim,
     'nightMode': 'nightMode'|trans,
     'dayMode': 'dayMode'|trans,
-    'titleData': 'dso_tr'|trans|trim,
-    'titleObservation': 'titleObservation'|trans|trim
+    'titleData': 'dso_tr'|trans|trim
   }
 %}
 <div id="appHeader"
  data-home-route="{{ path('homepage', {'_locale': currentLocale}) }}"
  data-notification="{{ notification|json_encode }}"
+ data-constellation="{{ constellation|json_encode }}"
  data-menu-data="{{ menuData|json_encode }}"
- data-menu-observation="{{ menuObservations|json_encode }}"
  data-menu-mobile="{{ leftSideMenu|json_encode }}"
  data-route="{{ _route }}"
  data-locales="{{ listLocales|json_encode }}"
