--- a/templates/sitemap.xml.twig
+++ b/templates/sitemap.xml.twig
@@ -6,7 +6,7 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://www.sitemaps.org/schemas/sitemap/0.9 http://www.sitemaps.org/schemas/sitemap/0.9/sitemap.xsd"
 >
-  {% for url in urls if 0 < urls|length %}
+  {% for url in urls %}
     <url>
       <loc>{{ url.loc }}</loc>
       {% if url.urlLoc is defined %}
