Fix Docker + skeleton popup

--- a/templates/includes/components/modal_social_network.html.twig
+++ b/templates/includes/components/modal_social_network.html.twig
@@ -13,7 +13,7 @@
           </div>
 
           <button class="Popup-close" id="PopupNewsletterClose" type="button" title="{{ 'close'|trans }}">
-            {{ icon('JLicon-Cross') }}
+{#            {{ icon('JLicon-Cross') }}#}
           </button>
         </div>
       </div>
