--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -10,6 +10,7 @@
 @import "components/Pagination";
 @import "components/Map";
 @import "components/Breadcrumbs";
+@import "components/ShareNetwork";
 // Components Homepage
 @import "components/Homeslider.scss";
 @import "components/Searchautocomplete.scss";
