--- a/templates/includes/components/modal_social_network.html.twig
+++ b/templates/includes/components/modal_social_network.html.twig
@@ -9,7 +9,7 @@
         <div class="Popup-innerContainer">
 
           <div class="Popup-body">
-            {{ description|raw }}
+            <p>Follow US on social media</p>
           </div>
 
           <button class="Popup-close" id="PopupNewsletterClose" type="button" title="{{ 'close'|trans }}">
