--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -11,6 +11,7 @@
 @import "components/Map";
 @import "components/Breadcrumbs";
 @import "components/ShareNetwork";
+@import "components/Popup";
 // Components Homepage
 @import "components/Homeslider.scss";
 @import "components/Searchautocomplete.scss";
