--- a/assets/css/components/ShareNetwork.scss
+++ b/assets/css/components/ShareNetwork.scss
@@ -17,7 +17,7 @@ a[class^="share-network-"] {
   align-content: center;
   align-items: center;
   cursor: pointer;
-  margin: 0 10px 10px 0;
+  margin: 0 2em 0 0;
   text-decoration: none;
 }
 a[class^="share-network-"] .fah {
