--- a/templates/pages/dso.html.twig
+++ b/templates/pages/dso.html.twig
@@ -6,7 +6,7 @@
 {% set descDefaut = 'dso.desc.seo'|trans({'%title%': dso.title, '%constId%': dso.constellation.title|lower,'%type%': dso.type|trans|lower, '%mag%': dso.magnitude }) %}
 {% set pageDesc = dso.description[:200]|default(descDefaut) %}
 {% set pageImageDesc = imgCoverAlt %}
-{% set lastUpdate = dso.updatedAt|date('Y/m/d i:s') %}
+{% set lastUpdate = dso.updatedAt|date(dateFormatLong|trans) %}
 {#https://coxpi.draftium.site/#}
 
 {% block content %}
