--- a/templates/includes/components/modal_social_network.html.twig
+++ b/templates/includes/components/modal_social_network.html.twig
@@ -1,4 +1,5 @@
 {% from 'helpers/icon.html.twig' import icon %}
+
 <div id="popup1"
    class="popup-overlay"
    data-popup-state="{{ popupState|default('disabled') }}"
@@ -9,16 +10,36 @@
     <a class="popup__close" href="#" data-popup-close>&times;</a>
     <div class="content">
       <img src="{{ pageImage200 }}" alt="{{ 'dso'|trans }}" class="center_image">
-      <p>
-        {{ 'social_network.description'|trans }}
-      </p>
-      <div class="content__left">
-        <a href="{{ facebook.path }}"{% if true is same as(facebook.blank) %} target="_blank" {% endif %}>{{ facebook.label }}</a>
+
+
+      <div class="popup__container">
+        <div class="popup__title_1">
+          {{ 'social_network.description'|trans }}
+        </div>
+        <div class="popup__content_1">
+          <a href="{{ facebook.path }}"{% if true is same as(facebook.blank) %} target="_blank" {% endif %}>
+            {{ facebook.label }}
+          </a>
+        </div>
+        <div class="popup__content_2">
+          <a href="{{ twitter.path }}"{% if true is same as(twitter.blank) %} target="_blank" {% endif %}>
+            {{ twitter.label }}
+          </a>
+        </div>
+        <div class="popup__title_2">
+          {{ 'support.second'|trans|raw }}
+        </div>
+        <div class="popup__content_3">
+
+        </div>
+        <div class="popup__content_4">
+
+        </div>
       </div>
 
-      <div class="content__right">
-        <a href="{{ twitter.path }}"{% if true is same as(twitter.blank) %} target="_blank" {% endif %}>{{ twitter.label }}</a>
-      </div>
+
+
+
     </div>
   </div>
 </div>
