--- a/assets/css/components/Popup.scss
+++ b/assets/css/components/Popup.scss
@@ -8,6 +8,7 @@
   transition: opacity 500ms;
   display: none;
   opacity: 0;
+  z-index: 100;
 
   //&:target {
   //  visibility: visible;
@@ -23,6 +24,9 @@
   width: 50%;
   position: relative;
   transition: all 5s ease-in-out;
+  @media($mq-phone) {
+    width: 90%;
+  }
 
   h2 {
     margin-top: 0;
@@ -45,14 +49,21 @@
 
   &__container {
     display: grid;
-    grid-template-columns: 10em 10em;
-    grid-template-rows: 4em 4em 4em 4em;
+    grid-template-columns: auto auto auto auto;
+    //grid-template-rows: 4em 4em 4em 4em;
     gap: 1em 1em;
     grid-template-areas:
       "popup__title_1 popup__title_1"
       "popup__content_1 popup__content_2"
       "popup__title_2 popup__title_2"
       "popup__content_3 popup__content_4";
+    @media($mq-phone) {
+      gap: 0.5em 0.5em;
+    }
+  }
+
+  &__content {
+    text-align: center;
   }
 
   &__title_1 { grid-area: popup__title_1; }
