--- a/templates/includes/components/modal_social_network.html.twig
+++ b/templates/includes/components/modal_social_network.html.twig
@@ -16,12 +16,12 @@
         <div class="popup__title_1">
           {{ 'social_network.description'|trans }}
         </div>
-        <div class="popup__content_1">
+        <div class="popup__content popup__content_1">
           <a href="{{ facebook.path }}"{% if true is same as(facebook.blank) %} target="_blank" {% endif %}>
             {{ facebook.label }}
           </a>
         </div>
-        <div class="popup__content_2">
+        <div class="popup__content popup__content_2">
           <a href="{{ twitter.path }}"{% if true is same as(twitter.blank) %} target="_blank" {% endif %}>
             {{ twitter.label }}
           </a>
@@ -29,17 +29,20 @@
         <div class="popup__title_2">
           {{ 'support.second'|trans|raw }}
         </div>
-        <div class="popup__content_3">
-
+        <div class="popup__content popup__content_3">
+          <a href="{{ tipeee.path }}"{% if true is same as(tipeee.blank) %} target="_blank" {% endif %}>
+            {{ tipeee.label }}
+          </a>
         </div>
-        <div class="popup__content_4">
-
+        <div class="popup__content popup__content_4">
+          <a href="{{ paypal.path }}"{% if true is same as(paypal.blank) %} target="_blank" {% endif %}>
+            {{ paypal.label }}
+          </a>
         </div>
       </div>
-
-
-
-
+    </div>
+    <div class="popup__footer">
+      <input type="button" value="{{ 'close'|trans }}" data-popup-close>
     </div>
   </div>
 </div>
