--- a/templates/includes/components/modal_social_network.html.twig
+++ b/templates/includes/components/modal_social_network.html.twig
@@ -1,5 +1,3 @@
-{% from 'helpers/icon.html.twig' import icon %}
-
 <div id="popup1"
    class="popup-overlay"
    data-popup-state="{{ popupState|default('disabled') }}"
@@ -7,23 +5,21 @@
 >
   <div class="popup">
     <h2 class="Dso__title">{{ 'social_network.follow_us'|trans }}</h2>
-    <a class="popup__close" href="#" data-popup-close>&times;</a>
+    <a class="popup__close" href="#" data-popup-close v-on:click="hidePopin()">&times;</a>
     <div class="content">
       <img src="{{ pageImage200 }}" alt="{{ 'dso'|trans }}" class="center_image">
-
-
       <div class="popup__container">
         <div class="popup__title_1">
           {{ 'social_network.description'|trans }}
         </div>
         <div class="popup__content popup__content_1">
           <a href="{{ facebook.path }}"{% if true is same as(facebook.blank) %} target="_blank" {% endif %}>
-            <svgicon name="{{ facebook.label }}" width="20" height="20"></svgicon>
+            <svgicon name="{{ facebook.icon_class }}" width="50" height="50" :color="svgBtnColor"></svgicon>
           </a>
         </div>
         <div class="popup__content popup__content_2">
           <a href="{{ twitter.path }}"{% if true is same as(twitter.blank) %} target="_blank" {% endif %}>
-            <svgicon name="{{ twitter.label }}" width="20" height="20"></svgicon>
+            <svgicon name="{{ twitter.icon_class }}" width="50" height="50" color="#3e3d40"></svgicon>
           </a>
         </div>
         <div class="popup__title_2">
@@ -31,18 +27,18 @@
         </div>
         <div class="popup__content popup__content_3">
           <a href="{{ tipeee.path }}"{% if true is same as(tipeee.blank) %} target="_blank" {% endif %}>
-            <svgicon name="{{ tipeee.label }}" width="20" height="20"></svgicon>
+            <svgicon name="{{ tipeee.icon_class }}" width="50" height="50" color="#3e3d40"></svgicon>
           </a>
         </div>
         <div class="popup__content popup__content_4">
           <a href="{{ paypal.path }}"{% if true is same as(paypal.blank) %} target="_blank" {% endif %}>
-            <svgicon name="{{ paypal.label }}" width="20" height="20"></svgicon>
+            <svgicon name="{{ paypal.icon_class }}" width="50" height="50" color="#3e3d40"></svgicon>
           </a>
         </div>
       </div>
     </div>
     <div class="popup__footer">
-      <button class="Form__submit" data-popup-close v-on:click="closeAndSetCookie">{{ 'close'|trans }}</button>
+      <button class="Form__submit" data-popup-close v-on:click="closeAndSetCookie()">{{ 'close'|trans }}</button>
     </div>
   </div>
 </div>
