--- a/assets/css/components/ShareNetwork.scss
+++ b/assets/css/components/ShareNetwork.scss
@@ -5,6 +5,9 @@
   justify-content: center;
   max-width: 1000px;
   margin: auto;
+  @media($mq-phone) {
+    display: grid;
+  }
 }
 a[class^="share-network-"] {
   flex: none;
@@ -19,6 +22,9 @@ a[class^="share-network-"] {
   cursor: pointer;
   margin: 0 2em 0 0;
   text-decoration: none;
+  @media($mq-phone) {
+    margin: 0.2em 1em 0.2em 1em
+  }
 }
 a[class^="share-network-"] .fah {
   background-color: rgba(0, 0, 0, 0.2);
