Set values + fix JS

--- a/templates/includes/components/modal_social_network.html.twig
+++ b/templates/includes/components/modal_social_network.html.twig
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="popup__footer">
-      <button class="Form__submit" data-popup-close v-on:click="closeAndSetCookie()">{{ 'close'|trans }}</button>
+      <button class="Form__submit" type="button" data-popup-close v-on:click="closeAndSetCookie()">{{ 'social_network.closePopin'|trans }}</button>
     </div>
   </div>
 </div>
