--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -37,6 +37,7 @@ $mq-from-tablet-plus: mq-build($minw: $start-tablet + 1);
 
 // Background Colors
 $bgd-dark: #3e3d40;
+$bgd-night-dark: #161b22;
 $bgd-cards: #2B2A34;
 $bgd-white: #ffffff;
 $bgd-grey: #595959;
