--- a/assets/css/components/Dso.scss
+++ b/assets/css/components/Dso.scss
@@ -1,9 +1,13 @@
 .Dso {
-
   &__main {
     background-color: $bgd-white;
     min-height: 50em;
     padding-bottom: 1em;
+
+    &.night {
+      background-color: $bgd-night-main;
+      color: #8B949E;
+    }
   }
 
   &__title {
@@ -11,6 +15,10 @@
     border-bottom: 1px solid $bgd-dark;
     margin-bottom: 0.2em;
     text-align: center;
+
+    &.night {
+      color: $color-text;
+    }
   }
 
   &__text {
@@ -43,6 +51,9 @@
     p {
       line-height: 1.5em;
     }
+    &.night {
+      color: #8B949E;
+    }
   }
 
   // Data
@@ -62,11 +73,9 @@
     @media($mq-phone) {
       width: 100%;
     }
-
   }
 
   &__tr {
-
   }
 
   &__td {
@@ -77,7 +86,10 @@
     @media($mq-phone) {
       font-size: 0.9rem;
     }
-
+    &.night {
+      background-color: $bgd-night-layout;
+      color: #8B949E
+    }
     a {
       color: $color-text;
       text-decoration: none;
