--- a/assets/css/components/LeftSlideMenu.scss
+++ b/assets/css/components/LeftSlideMenu.scss
@@ -3,13 +3,15 @@
     position: fixed;
     width: 36px;
     height: 30px;
-    left: 36px;
-    top: 36px;
+    margin-left: 1em !important;
+    left: 0 !important;
+    top: 1em !important;
     cursor: pointer;
+    z-index: 100;
   }
 
   &-bars {
-    background-color: $bgd-grey;
+    background-color: $bgd-light-grey !important;
   }
 }
 
