--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -44,8 +44,13 @@ $bgd-light-grey: #f8f8f8;
 $bgd-error: #f8d7da;
 $bgd-success: #d4edda;
 // Dark mode
-$bgd-night-layout: #161b22;
-$bgd-night-main: #0D1117;
+//$bgd-night-main: #0D1117;
+$bgd-night-main: #161b22;
+$bgd-night-section: #1B2A32;
+$bgd-night-cards: #0D1117;
+$bgd-night-menu: #28404E;
+$bgd-night-td: #17252B; //
+$bgd-night-input: #17252B;
 
 // Border
 $border-light-grey: #939598;
@@ -57,6 +62,9 @@ $color-text: #e9e9e9;
 $color-text-dark: $bgd-dark;
 $color-success: #3c763d;
 $color-error: #a94442;
+// Dark mode
+$color-night-text: #A7B6BF;
+$color-night-text-dark: #C0C6CB;
 
 // line height
 $lineheight: 1rem;
