Add style night

--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -35,6 +35,6 @@ body {
   overflow-x: hidden;
 
   &.night {
-    background-color: $bgd-night-layout;
+    background-color: $bgd-night-section;
   }
 }
