--- a/assets/css/components/LeftSlideMenu.scss
+++ b/assets/css/components/LeftSlideMenu.scss
@@ -12,6 +12,9 @@
 
   &-bars {
     background-color: $bgd-light-grey !important;
+    &.night {
+      background-color: $color-night-text !important;
+    }
   }
 }
 
@@ -56,6 +59,9 @@ body {
   padding-top: 60px; /* Place content 60px from the top */
   transition: 0.5s; /*0.5 second transition effect to slide in the sidenav*/
   opacity: 0.9;
+  &.night {
+    background-color: $bgd-night-menu !important;
+  }
 }
 
 .bm-overlay {
