--- a/assets/css/components/switchDarkMode.scss
+++ b/assets/css/components/switchDarkMode.scss
@@ -2,8 +2,8 @@ $mode-toggle-bg: #e9e9e9;
 
 .mode-toggle {
   position: relative;
-  //margin: auto .5rem .5rem auto;
-  padding: 0;
+  margin: 0 0.7em 0.7em 0;
+  padding: 0 0.7em !important;
   width: 44px;
   height: 24px;
   min-width: 36px;
