--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -65,7 +65,7 @@ $color-error: #a94442;
 // Dark mode
 $color-night-text: #A7B6BF;
 $color-night-text-dark: #C0C6CB;
-
+$color-night-link: #4aaed9;
 // line height
 $lineheight: 1rem;
 
