--- a/assets/css/components/Dso.scss
+++ b/assets/css/components/Dso.scss
@@ -92,6 +92,10 @@
       text-decoration: none;
       cursor: pointer;
     }
+
+    &.night {
+      background-color: $bgd-night-td;
+    }
   }
 
   // Slider VueFlux
