--- a/assets/css/components/CardsGrid.scss
+++ b/assets/css/components/CardsGrid.scss
@@ -262,6 +262,10 @@
        color: $color-text-dark;
        text-decoration: none;
        cursor: pointer;
+
+       &.night {
+         color: $color-night-link;
+       }
      }
   }
 
