--- a/assets/css/components/Header.scss
+++ b/assets/css/components/Header.scss
@@ -16,26 +16,28 @@
     }
   }
 
-  &__barSlideMenu {
-    @media ($mq-phone) {
-      display: block;
-      top: 0.5em;
-      &:hover {
-        cursor: pointer;
-      }
-    }
-    @media ($mq-desktop) {
-      display: none;
-    }
-    @media ($mq-tablet) {
-      display: none;
-    }
-  }
+  //&__barSlideMenu {
+  //  @media ($mq-phone) {
+  //    display: block;
+  //    top: 0.5em;
+  //    &:hover {
+  //      cursor: pointer;
+  //    }
+  //  }
+  //  @media ($mq-desktop) {
+  //    display: none;
+  //  }
+  //  @media ($mq-tablet) {
+  //    display: none;
+  //  }
+  //}
 
   &__wrap {
     padding: 0.5em;
     width: 100%;
     display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
     align-items: flex-end;
     justify-content: space-between;
     opacity: 0.7;
@@ -43,6 +45,12 @@
 
     @media ($mq-phone) {
       opacity: 0.9;
+    }
+
+    &__sup_ul {
+      margin: 0;
+      padding: 0;
+      display: inline-flex;
     }
   }
 
@@ -113,6 +121,14 @@
         color: $color-text;
         background-color: $bgd-grey;
       }
+
+      &.night {
+        &:hover {
+          background-color: $bgd-night-menu;
+          color: $color-night-text
+        }
+      }
+
       span {
         padding-left: 0.5em;
       }
@@ -142,6 +158,13 @@
       &:hover {
         color: $color-text;
         background-color: $bgd-grey;
+      }
+
+      &.night {
+        &:hover {
+          background-color: $bgd-night-menu;
+          color: $color-night-text
+        }
       }
     }
   }
