Add night mode to forgotten elements

--- a/assets/css/components/Footer.scss
+++ b/assets/css/components/Footer.scss
@@ -36,7 +36,7 @@
     &_bloc1 {
       font-weight: 300;
       font-size: 2em;
-      margin: 0 0.5em;
+      margin: 0 0.5em 0 0;
     }
     &_bloc2 {
     }
