--- a/assets/css/components/Header.scss
+++ b/assets/css/components/Header.scss
@@ -36,9 +36,7 @@
     padding: 0.5em;
     width: 100%;
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: flex-end;
+    flex-flow: row nowrap;
     justify-content: space-between;
     opacity: 0.7;
     min-width: 320px;
