--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -22,6 +22,7 @@
 @import "components/BandeauHeader";
 @import "components/Cards";
 @import "components/CardsGrid";
+@import "components/Facets";
 @import "components/VueFlux";
 // List
 @import "components/Filters";
