Refactoring facets + add data

--- a/assets/css/_default.scss
+++ b/assets/css/_default.scss
@@ -13,6 +13,7 @@
 @import "components/ShareNetwork";
 @import "components/Popup";
 @import "components/switchDarkMode";
+@import "components/Scrollbar";
 // Components Homepage
 @import "components/Homeslider.scss";
 @import "components/Searchautocomplete.scss";
