--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -43,6 +43,9 @@ $bgd-grey: #595959;
 $bgd-light-grey: #f8f8f8;
 $bgd-error: #f8d7da;
 $bgd-success: #d4edda;
+
+$line-stroke-green: #1ED760;
+
 // Dark mode
 //$bgd-night-main: #0D1117;
 $bgd-night-section: #1B2A32;
