--- a/assets/css/components/Facets.scss
+++ b/assets/css/components/Facets.scss
@@ -68,50 +68,38 @@ textarea, input {
     }
   }
   &__dropdown {
-    opacity: 0;
-    visibility: hidden;
+    display: none;
+  //  opacity: 0;
+  //  visibility: hidden;
     //background: #fff
     //url("http://res.cloudinary.com/dnhvfgp9c/image/upload/v1521734636/bcg-pattern.png")
     //repeat;
-    position: absolute;
+    //position: absolute;
     left: 0;
     right: 0;
-    border: 1px solid red;
     //box-shadow: 0 12px 15px 6px rgba(0, 0, 0, 0.1);
     //border-radius: 0 0 8px 8px;
     overflow: hidden;
     padding-bottom: 25px;
-    &:after,
+    /*&:after,
     &:before {
-      position: absolute;
       content: "";
       top: 0;
       display: block;
-      height: 4px;
+      height: 2px;
       z-index: 1;
     }
-    &:after {
+    /*&:after {
       opacity: 0;
-      background: #000;
-
-      left: -200px;
-      width: 200px;
-      background-color: #2980b9;
-      transition: opacity 0.3s ease;
-      animation: load 1.8s linear infinite;
-      background: linear-gradient(
-          135deg,
-          rgba(143, 36, 237, 1) 20%,
-          rgba(143, 36, 237, 1) 20%,
-          rgba(143, 36, 237, 1) 22%,
-          rgba(143, 36, 237, 1) 25%,
-          rgba(16, 124, 179, 1) 100%
-      );
-    }
-    &:before {
-      width: 100%;
-      background-color: #000;
-    }
+      //left: -200px;
+      //width: 200px;
+      //transition: opacity 0.3s ease;
+      //animation: load 1.8s linear infinite;
+    }*/
+    //&:before {
+    //  width: 100%;
+    //  background-color: #000;
+    //}
     &.activeSearch {
       &:after {
         opacity: 1;
@@ -123,7 +111,7 @@ textarea, input {
     }
   }
   &__search-wrapp {
-    padding: 10px 25px 5px;
+    padding: 0.2em 0.5em;
     @media only screen and (max-width: 600px) {
       padding: 10px 15px 5px;
     }
@@ -131,11 +119,9 @@ textarea, input {
       width: 100%;
       height: 40px;
       border-width: 0 0 2px;
+      border-color: $line-stroke-green;
       border-style: solid;
-      border-color: #000;
       font-size: 16px;
-      //font-family: "Roboto Slab", serif;
-      background: transparent;
     }
     ::-webkit-input-placeholder {
       /* Chrome/Opera/Safari */
@@ -178,8 +164,13 @@ textarea, input {
   }
   &__filters-wrapp {
     margin-top: 20px;
-    height: 157px;
+    max-height: 300px;
     overflow-y: auto;
+    padding: 0 0.5em;
+
+    li {
+      line-height: 1em;
+    }
   }
 
   &__check-wrapp {
@@ -207,7 +198,6 @@ textarea, input {
         user-select: none;
         transition: padding 0.25s ease;
         &:after {
-          border: solid 2px #000;
           content: "";
           width: 22px;
           height: 22px;
@@ -222,7 +212,6 @@ textarea, input {
           position: absolute;
           top: 4px;
           left: 4px;
-          background-color: #000;
           opacity: 0;
           will-change: transform;
           transform: scale(0.5);
