Class css for aside

--- a/assets/css/components/CardsGrid.scss
+++ b/assets/css/components/CardsGrid.scss
@@ -4,10 +4,12 @@
   --grid-items: auto-fill;
 }
 
-#appGrid aside {
-  width: 15em;
-  float: left;
-  padding: 0.5em;
+.appGrid {
+  &__aside {
+    width: 15em;
+    float: left;
+    padding: 0.5em;
+  }
 }
 
 // GRID
