--- a/assets/css/components/CardsGrid.scss
+++ b/assets/css/components/CardsGrid.scss
@@ -9,6 +9,12 @@
     width: 15em;
     float: left;
     padding: 0.5em;
+
+    @media ($mq-phone) {
+      float: unset;
+      width: auto;
+      padding: 0;
+    }
   }
 }
 
@@ -223,6 +229,7 @@
     span {
       display: inline-block;
       vertical-align: middle;
+      font-size: 1rem;
     }
   }
 
