--- a/assets/css/components/Facets.scss
+++ b/assets/css/components/Facets.scss
@@ -31,10 +31,10 @@ textarea, input {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    @media only screen and (max-width: 600px) {
-      padding: 0 15px;
-      height:70px;
-    }
+    //@media only screen and (max-width: 600px) {
+    //  padding: 0 15px;
+    //  height:70px;
+    //}
     @media ($mq-phone) {
       padding: 0.5em;
       height: auto;
