--- a/assets/css/components/Facets.scss
+++ b/assets/css/components/Facets.scss
@@ -9,8 +9,8 @@ textarea, input {
   position: relative;
   max-width: 440px;
   width:100%;
-  @media only screen and (max-width: 600px) {
-    margin:100px auto 0;
+  @media ($mq-phone) {
+    margin: 0 0.5em
   }
   &__trigger {
     //border-radius: 10px;
