--- a/assets/css/components/Facets.scss
+++ b/assets/css/components/Facets.scss
@@ -85,6 +85,10 @@ textarea, input {
     //border-radius: 0 0 8px 8px;
     overflow: hidden;
     padding-bottom: 25px;
+
+    @media ($mq-phone) {
+      padding-bottom: 0;
+    }
     /*&:after,
     &:before {
       content: "";
@@ -116,8 +120,8 @@ textarea, input {
   }
   &__search-wrapp {
     padding: 0.2em 0.5em;
-    @media only screen and (max-width: 600px) {
-      padding: 10px 15px 5px;
+    @media ($mq-phone) {
+      padding: 0.5em 1em 0.5em 0;
     }
     input {
       width: 100%;
@@ -171,6 +175,11 @@ textarea, input {
     max-height: 300px;
     overflow-y: auto;
     padding: 0 0.5em;
+
+    @media ($mq-phone) {
+      margin-top: 0;
+      max-height: 200px;
+    }
 
     li {
       line-height: 1em;
