--- a/assets/css/components/Popup.scss
+++ b/assets/css/components/Popup.scss
@@ -25,7 +25,7 @@
   transition: all 5s ease-in-out;
   @media($mq-phone) {
     margin: 1em auto;
-    padding: 0.9em;
+    padding: 0.9em 0.5em;
     width: 90%;
   }
 
