--- a/templates/includes/layout/analytics.html.twig
+++ b/templates/includes/layout/analytics.html.twig
@@ -6,7 +6,7 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', {{ analyticsId }});
+    gtag('config', '{{ analyticsId }}');
   </script>
 {% endif %}
 <!-- End Google Analytics -->
